# rnnoise_16k

./: CMakeLists.txt  main.c
